--- a/index.html
+++ b/index.html
@@ -164,10 +164,17 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>بوابة المؤتمر العلمي للكيمياء</h1>
-    <div class="subtitle">اختر الخدمة التي ترغب بها</div>
+  <div class="top-header">
+    <img src="logo.jpg" alt="Conference Logo">
+    <div class="title-block">
+      <div class="main-title">Chemistry Horizons – SSC2 2026</div>
+      <div class="sub-title">Jerash University • Second Scientific Conference in Chemistry</div>
+    </div>
+  </div>
 
+  <div class="container">
+    <!-- هنا تأتي باقي الصفحة: العنوان بالعربي، الأيقونات، الأقسام... -->
+          
     <!-- الأيقونات الثلاث -->
     <div class="icon-row">
       <div class="icon-card" onclick="showSection('attendance')">
@@ -386,3 +393,4 @@
   </script>
 </body>
 </html>
+
