--- a/index.html
+++ b/index.html
@@ -165,6 +165,16 @@
 </head>
 <body>
   <div class="top-header">
+  <img src="logo.jpg" alt="Conference Logo">
+  <div class="title-block">
+    <div class="main-title">Chemistry Horizons – SSC2 2026</div>
+    <div class="sub-title">Jerash University • Second Scientific Conference in Chemistry</div>
+  </div>
+</div>
+
+<div class="container">
+
+  <div class="top-header">
     <img src="logo.jpg" alt="Conference Logo">
     <div class="title-block">
       <div class="main-title">Chemistry Horizons – SSC2 2026</div>
@@ -393,4 +403,5 @@
   </script>
 </body>
 </html>
+
 
