--- a/index.html
+++ b/index.html
@@ -3,7 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <title>بوابة المؤتمر العلمي للكيمياء</title>
-  <style>
+  <s.top-header {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding: 10px 20px;
+  background: #020617;
+  border-bottom: 1px solid #1e293b;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.top-header img {
+  height: 60px;
+  border-radius: 10px;
+}
+
+.top-header .title-block {
+  display: flex;
+  flex-direction: column;
+  color: #e2e8f0;
+}
+
+.top-header .main-title {
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.top-header .sub-title {
+  font-size: 12px;
+  color: #94a3b8;
+}
+tyle>
     body {
       margin: 0;
       font-family: Tahoma, Arial, sans-serif;
@@ -403,5 +435,6 @@
   </script>
 </body>
 </html>
+
 
 
