--- a/index.html
+++ b/index.html
@@ -3,39 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>بوابة المؤتمر العلمي للكيمياء</title>
-  <s.top-header {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  padding: 10px 20px;
-  background: #020617;
-  border-bottom: 1px solid #1e293b;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
 
-.top-header img {
-  height: 60px;
-  border-radius: 10px;
-}
-
-.top-header .title-block {
-  display: flex;
-  flex-direction: column;
-  color: #e2e8f0;
-}
-
-.top-header .main-title {
-  font-size: 17px;
-  font-weight: bold;
-}
-
-.top-header .sub-title {
-  font-size: 12px;
-  color: #94a3b8;
-}
-tyle>
+  <style>
     body {
       margin: 0;
       font-family: Tahoma, Arial, sans-serif;
@@ -43,20 +12,58 @@ tyle>
       background: #020617;
       color: #e5e7eb;
     }
+
+    /* هيدر الشعار */
+    .top-header {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      padding: 10px 20px;
+      background: #020617;
+      border-bottom: 1px solid #1e293b;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .top-header img {
+      height: 60px;
+      border-radius: 10px;
+    }
+
+    .top-header .title-block {
+      display: flex;
+      flex-direction: column;
+      color: #e2e8f0;
+    }
+
+    .top-header .main-title {
+      font-size: 17px;
+      font-weight: bold;
+    }
+
+    .top-header .sub-title {
+      font-size: 12px;
+      color: #94a3b8;
+    }
+
     .container {
       max-width: 960px;
       margin: 0 auto;
       padding: 20px;
     }
+
     h1 {
       text-align: center;
       margin-bottom: 10px;
     }
+
     .subtitle {
       text-align: center;
       color: #9ca3af;
       margin-bottom: 30px;
     }
+
     .icon-row {
       display: flex;
       flex-wrap: wrap;
@@ -64,6 +71,7 @@ tyle>
       justify-content: center;
       margin-bottom: 30px;
     }
+
     .icon-card {
       background: #0f172a;
       border-radius: 16px;
@@ -74,14 +82,17 @@ tyle>
       box-shadow: 0 15px 30px rgba(0,0,0,0.4);
       transition: transform 0.2s, box-shadow 0.2s;
     }
+
     .icon-card:hover {
       transform: translateY(-4px);
       box-shadow: 0 20px 40px rgba(0,0,0,0.6);
     }
+
     .icon-emoji {
       font-size: 40px;
       margin-bottom: 8px;
     }
+
     .section {
       display: none;
       background: #020617;
@@ -90,17 +101,21 @@ tyle>
       border: 1px solid #1f2937;
       margin-bottom: 30px;
     }
+
     .section.active {
       display: block;
     }
+
     /* نموذج الحضور */
     .form-row {
       margin-bottom: 10px;
     }
+
     label {
       display: block;
       margin-bottom: 4px;
     }
+
     input[type="text"], input[type="email"] {
       width: 100%;
       padding: 8px;
@@ -109,6 +124,7 @@ tyle>
       outline: none;
       font-size: 14px;
     }
+
     button {
       padding: 8px 16px;
       border-radius: 8px;
@@ -119,14 +135,17 @@ tyle>
       cursor: pointer;
       margin-top: 8px;
     }
+
     button:disabled {
       opacity: 0.6;
       cursor: default;
     }
+
     .msg {
       margin-top: 8px;
       font-size: 14px;
     }
+
     .msg.ok { color: #4ade80; }
     .msg.err { color: #f97373; }
 
@@ -137,21 +156,42 @@ tyle>
       align-items: center;
       margin-bottom: 10px;
     }
+
     .avatar-face {
-      width: 70px;
-      height: 70px;
+      width: 90px;
+      height: 90px;
       border-radius: 50%;
-      border: 2px solid #22c55e;
+      border: 3px solid #22c55e;
+      overflow: hidden;
+      background: #0b1120;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 40px;
-      background: #0b1120;
+      transition: transform 0.2s;
     }
+
+    .avatar-face img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .avatar-face.talking {
+      animation: pulse 1s infinite ease-in-out;
+      box-shadow: 0 0 15px #22c55e;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.06); }
+      100% { transform: scale(1); }
+    }
+
     .status {
       font-size: 13px;
       color: #9ca3af;
     }
+
     .chat-log {
       background: #020617;
       border-radius: 10px;
@@ -162,13 +202,16 @@ tyle>
       margin-bottom: 10px;
       border: 1px solid #111827;
     }
+
     .msg-user   { color: #38bdf8; margin-bottom: 4px; }
     .msg-bot-ar { color: #a5b4fc; margin-bottom: 2px; }
     .msg-bot-en { color: #fbbf24; margin-bottom: 8px; font-size: 13px; }
+
     .chat-input-row {
       display: flex;
       gap: 8px;
     }
+
     .chat-input-row input {
       flex: 1;
       padding: 8px;
@@ -185,27 +228,22 @@ tyle>
       margin-top: 10px;
       font-size: 14px;
     }
+
     th, td {
       padding: 8px;
       border: 1px solid #1f2937;
       text-align: center;
     }
+
     th {
       background: #111827;
     }
   </style>
 </head>
+
 <body>
-  <div class="top-header">
-  <img src="logo.jpg" alt="Conference Logo">
-  <div class="title-block">
-    <div class="main-title">Chemistry Horizons – SSC2 2026</div>
-    <div class="sub-title">Jerash University • Second Scientific Conference in Chemistry</div>
-  </div>
-</div>
 
-<div class="container">
-
+  <!-- الهيدر مع الشعار -->
   <div class="top-header">
     <img src="logo.jpg" alt="Conference Logo">
     <div class="title-block">
@@ -215,9 +253,8 @@ tyle>
   </div>
 
   <div class="container">
-    <!-- هنا تأتي باقي الصفحة: العنوان بالعربي، الأيقونات، الأقسام... -->
-          
-    <!-- الأيقونات الثلاث -->
+
+    <!-- الأيقونات -->
     <div class="icon-row">
       <div class="icon-card" onclick="showSection('attendance')">
         <div class="icon-emoji">📝</div>
@@ -238,56 +275,63 @@ tyle>
       </div>
     </div>
 
-    <!-- 1) قسم تسجيل الحضور -->
+    <!-- قسم تسجيل الحضور -->
     <div id="attendance" class="section">
-      <h2>تسجيل الحضور في المؤتمر</h2>
+      <h2>تسجيل الحضور</h2>
+
       <div class="form-row">
-        <label for="name">الاسم الكامل</label>
+        <label>الاسم الكامل</label>
         <input id="name" type="text" placeholder="اكتب اسمك" />
       </div>
+
       <div class="form-row">
-        <label for="university">الجامعة</label>
+        <label>الجامعة</label>
         <input id="university" type="text" placeholder="اسم الجامعة" />
       </div>
+
       <div class="form-row">
-        <label for="email">البريد الإلكتروني</label>
+        <label>البريد الإلكتروني</label>
         <input id="email" type="email" placeholder="example@domain.com" />
       </div>
-      <button id="regBtn" onclick="registerAttendance()">تسجيل الحضور</button>
+
+      <button onclick="registerAttendance()" id="regBtn">تسجيل الحضور</button>
       <div id="regMsg" class="msg"></div>
     </div>
 
-    <!-- 2) قسم الأفاتار -->
+    <!-- قسم الأفاتار -->
     <div id="avatar" class="section">
       <h2>أفاتار المؤتمر</h2>
+
       <div class="avatar-card">
-        <div class="avatar-face">👨‍🔬</div>
+        <div class="avatar-face" id="avatarFace">
+          <img src="avatar.jpg" alt="Avatar">
+        </div>
         <div>
-          <div><strong>أستاذ الكيمياء الافتراضي</strong></div>
-          <div class="status" id="avatarStatus">اسألني عن أهداف المؤتمر، المكان، المتحدثين، مواعيد الجلسات...</div>
+          <strong>أستاذ الكيمياء الافتراضي</strong>
+          <div class="status" id="avatarStatus">
+            اسألني عن أهداف المؤتمر، المتحدثين، المكان، مواعيد الجلسات...
+          </div>
         </div>
       </div>
 
       <div class="chat-log" id="chatLog"></div>
 
       <div class="chat-input-row">
-        <input id="question" type="text" placeholder="اكتب سؤالك هنا..." />
-        <button id="askBtn" onclick="askAvatar()">إرسال</button>
+        <input id="question" type="text" placeholder="اكتب سؤالك..." />
+        <button onclick="askAvatar()" id="askBtn">إرسال</button>
       </div>
     </div>
 
-    <!-- 3) قسم جدول المؤتمر -->
+    <!-- جدول المؤتمر -->
     <div id="schedule" class="section">
       <h2>جدول المؤتمر</h2>
-      <p style="font-size:13px;color:#9ca3af;">
-        يمكنك تعديل هذا الجدول يدويًا داخل ملف index.html حسب مواعيد مؤتمرِك.
-      </p>
+
       <table>
         <thead>
           <tr>
             <th>اليوم</th>
             <th>الوقت</th>
-            <th>عنوان الجلسة</th>
+            <th>العنوان</th>
             <th>المتحدث</th>
           </tr>
         </thead>
@@ -298,143 +342,77 @@ tyle>
             <td>الجلسة الافتتاحية</td>
             <td>رئيس المؤتمر</td>
           </tr>
-          <tr>
-            <td>اليوم الأول</td>
-            <td>11:30 - 13:00</td>
-            <td>آفاق الكيمياء الخضراء</td>
-            <td>د. مثال</td>
-          </tr>
-          <tr>
-            <td>اليوم الثاني</td>
-            <td>10:00 - 11:30</td>
-            <td>التطبيقات الصناعية للكيمياء التحليلية</td>
-            <td>د. مثال آخر</td>
-          </tr>
         </tbody>
       </table>
     </div>
+
   </div>
 
   <script>
+
     function showSection(id) {
-      document.querySelectorAll('.section').forEach(sec => sec.classList.remove('active'));
-      const el = document.getElementById(id);
-      if (el) el.classList.add('active');
+      document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
     }
 
-    // افتراضيًا نُظهر قسم الأفاتار أو الحضور كما تحب
     showSection('attendance');
 
-    // 1) تسجيل الحضور
+    /* تسجيل الحضور */
     async function registerAttendance() {
       const name = document.getElementById('name').value.trim();
       const university = document.getElementById('university').value.trim();
       const email = document.getElementById('email').value.trim();
-      const btn = document.getElementById('regBtn');
-      const msgEl = document.getElementById('regMsg');
-
-      msgEl.textContent = "";
-      msgEl.className = "msg";
 
       if (!name || !university || !email) {
-        msgEl.textContent = "الرجاء تعبئة جميع الحقول.";
-        msgEl.classList.add('err');
+        document.getElementById('regMsg').textContent = "الرجاء تعبئة جميع الحقول.";
+        document.getElementById('regMsg').classList.add('err');
         return;
       }
 
-      btn.disabled = true;
-      try {
-        const res = await fetch("/register", {
-          method: "POST",
-          headers: {"Content-Type": "application/json"},
-          body: JSON.stringify({name, university, email})
-        });
-        const data = await res.json();
-        if (data.ok) {
-          msgEl.textContent = data.message;
-          msgEl.classList.add('ok');
-          document.getElementById('name').value = "";
-          document.getElementById('university').value = "";
-          document.getElementById('email').value = "";
-        } else {
-          msgEl.textContent = data.message || "حدث خطأ أثناء التسجيل.";
-          msgEl.classList.add('err');
-        }
-      } catch (e) {
-        msgEl.textContent = "تعذر الاتصال بالخادم. تأكد أن server.py يعمل.";
-        msgEl.classList.add('err');
-      } finally {
-        btn.disabled = false;
-      }
+      const res = await fetch('/register', {
+        method: 'POST',
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify({name, university, email})
+      });
+
+      const data = await res.json();
+      document.getElementById('regMsg').textContent = data.message;
+      document.getElementById('regMsg').classList.add('ok');
     }
 
-    // 2) الأفاتار
-    const chatLog = document.getElementById('chatLog');
-    const questionInput = document.getElementById('question');
-    const askBtn = document.getElementById('askBtn');
-    const avatarStatus = document.getElementById('avatarStatus');
+    /* الأفاتار */
+    const avatarFace = document.getElementById('avatarFace');
 
-    function addMsg(text, type) {
-      const p = document.createElement("p");
-      p.textContent = text;
-      if (type === "user") p.className = "msg-user";
-      if (type === "bot-ar") p.className = "msg-bot-ar";
-      if (type === "bot-en") p.className = "msg-bot-en";
-      chatLog.appendChild(p);
-      chatLog.scrollTop = chatLog.scrollHeight;
-    }
-
-    function speakArabic(text) {
-      if (!("speechSynthesis" in window)) return;
+    function speakAR(text) {
       const u = new SpeechSynthesisUtterance(text);
       u.lang = "ar-SA";
-      u.rate = 1.0;
-      u.pitch = 1.0;
-      window.speechSynthesis.cancel();
-      window.speechSynthesis.speak(u);
+
+      avatarFace.classList.add("talking");
+      u.onend = () => avatarFace.classList.remove("talking");
+
+      speechSynthesis.speak(u);
     }
 
     async function askAvatar() {
-      const q = questionInput.value.trim();
+      const q = document.getElementById('question').value.trim();
       if (!q) return;
-      addMsg("👤 أنت: " + q, "user");
-      questionInput.value = "";
-      questionInput.focus();
-      askBtn.disabled = true;
-      avatarStatus.textContent = "جاري إعداد الإجابة من ملف المؤتمر...";
 
-      try {
-        const res = await fetch("/ask", {
-          method: "POST",
-          headers: {"Content-Type": "application/json"},
-          body: JSON.stringify({question: q})
-        });
-        const data = await res.json();
-        const ar = data.answer_ar || "";
-        const en = data.answer_en || "";
+      const res = await fetch('/ask', {
+        method: 'POST',
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify({question: q})
+      });
 
-        if (ar) {
-          addMsg("🤖 بالعربية: " + ar, "bot-ar");
-          speakArabic(ar);
-        }
-        if (en) {
-          addMsg("🌐 English: " + en, "bot-en");
-        }
-        avatarStatus.textContent = "اسألني عن أي شيء يخص المؤتمر.";
-      } catch (e) {
-        addMsg("تعذر الاتصال بالخادم. تأكد أن server.py يعمل.", "bot-ar");
-        avatarStatus.textContent = "مشكلة في الاتصال بالخادم.";
-      } finally {
-        askBtn.disabled = false;
-      }
+      const data = await res.json();
+
+      chatLog.innerHTML += `<p class="msg-user">👤 أنت: ${q}</p>`;
+      chatLog.innerHTML += `<p class="msg-bot-ar">🤖 بالعربية: ${data.answer_ar}</p>`;
+      chatLog.innerHTML += `<p class="msg-bot-en">🌐 English: ${data.answer_en}</p>`;
+
+      speakAR(data.answer_ar);
     }
 
-    questionInput.addEventListener("keydown", (e) => {
-      if (e.key === "Enter") askAvatar();
-    });
   </script>
+
 </body>
 </html>
-
-
-
